syntax = "proto3";

option java_package = "com.mmb.setting_proto";
option java_multiple_files = true;

message Setting {
  int32 session_duration = 1;
  int32 session_count = 2;
  int32 short_break_duration = 3;
  int32 long_break_duration = 4;
  bool enable_sounds = 5;
  THEME theme = 6;
  string session_name = 7;

  enum THEME{
    DARK = 0;
    LIGHT = 1;
    SYSTEM_DEFAULT = 2;
  }
}